fix(user-settings-menu): to not have overlapping border

--- a/src/components/user-settings-menu/user-settings-menu.mod.css
+++ b/src/components/user-settings-menu/user-settings-menu.mod.css
@@ -19,6 +19,7 @@
   right: 0;
   top: 34px;
   padding: 0;
+  overflow: hidden;
 }
 
 .menu::before {
